# Technovate-PowerBox-Firmware

./: README.md
PowerBox_Addon/: README.md  platformio.ini
PowerBox_Addon/include/: device_manager.h  device_setup.h  energy_module.h  global_config.h  proccess_manager.h  relay_control.h  task.h
PowerBox_Addon/src/: bms_read.cpp  buzzer_alert.cpp  device_setup.cpp  energy_module.cpp  flash_memory.cpp  global_config.cpp  main.cpp  mqtt.cpp  notification.cpp  relay_control.cpp
PowerBox_IoT/: README.md
PowerBox_IoT/PowerBoxIoT/: PowerBoxIoT.code-workspace  partitions.csv  platformio.ini
PowerBox_IoT/PowerBoxIoT/include/: buzzer_alert.h  connectivity.h  device_manager.h  device_setup.h  disp.h  disp_setup.h  flash_mem.h  global.h  global_config.h  header.h  mqtt.h  notification.h  task.h  time_lib.h  timer.h  ui.h  ui_comp.h  ui_events.h  ui_events2.h  ui_helpers2.h
PowerBox_IoT/PowerBoxIoT/src/: CMakeLists.txt  bluetooth.cpp  buzzer_alert.cpp  connectivity.cpp  device_manager.cpp  device_setup.cpp  disp_setup.cpp  filelist.txt  flash_mem.cpp  global_config.cpp  main.cpp  mqtt.cpp  notification.cpp  task.cpp  time_lib.cpp  ui.c  ui_Error_Screen.c  ui_MAIN.c  ui_SplashScreen1.c  ui_SplashScreen2.c  ui_Success_Screen.c  ui_Wifi_Setup.c  ui_comp_backhomebutton.c  ui_comp_backhomebutton.h  ui_comp_hook.c  ui_comp_hook.h  ui_events.cpp  ui_font_Bold.c  ui_helpers2.c  ui_img_1225420195.c  ui_img_12471400_png.c  ui_img_1355713233.c  ui_img_1429571099.c  ui_img_146667093.c  ui_img_1608614634.c  ui_img_1776405879.c  ui_img_1786102466.c  ui_img_1958972174.c  ui_img_20240808_153214_png.c  ui_img_20240808_165355_png.c  (+37 more)
PowerBox_IoT/battery_monitoring/: battery_monitoring.ino
PowerBox_Main/: README.md  partitions.csv
PowerBox_Main/include/: bluetooth.h  bms_read.h  buzzer_alert.h  connectivity.h  flash_memory.h  global_config.h  inverter_read.h  notification.h
PowerBox_Main/src/: bluetooth.cpp  bms_read.cpp  connectivity.cpp  device_manager.cpp  flash_memory.cpp  global_config.cpp  inverter_read.cpp  main.cpp  mqtt.cpp  platformio.ini  process_manager.cpp
