SET(SOURCES ui_comp_backhomebutton.c
    ui_comp.c
    ui_SplashScreen1.c
    ui_SplashScreen2.c
    ui_MAIN.c
    ui_Success_Screen.c
    ui_Error_Screen.c
    ui_Wifi_Setup.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.cpp
    ui_img_20240808_165355_png.c
    ui_img_20240808_153214_png.c
    ui_img_1608614634.c
    ui_img_settings_bg_png.c
    ui_img_icons_bluetooth24_png.c
    ui_img_icons_wifi24_png.c
    ui_img_icons_lock_png.c
    ui_img_icons_ups_png.c
    ui_img_icons_4g_png.c
    ui_img_icons_net1_png.c
    ui_img_279950534.c
    ui_img_1429571099.c
    ui_img_745627511.c
    ui_img_1225420195.c
    ui_img_628040357.c
    ui_img_water_3_png.c
    ui_img_battery_bg_png.c
    ui_img_icn_charge_png.c
    ui_img_btn_knob_png.c
    ui_img_960726147.c
    ui_img_628039206.c
    ui_img_pin_line_png.c
    ui_img_naira_png.c
    ui_img_602704857.c
    ui_img_2027358424.c
    ui_img_896946180.c
    ui_img_1776405879.c
    ui_img_1958972174.c
    ui_img_59504384.c
    ui_img_icons_success_png.c
    ui_img_icons_fail_png.c
    ui_img_242677916.c
    ui_img_icons_bluetooth24_png.c
    ui_img_896946180.c
    ui_img_1958972174.c
    ui_img_1786102466.c
    ui_img_222824350.c
    ui_img_icons_monitor_png.c
    ui_img_510141704.c
    ui_img_146667093.c
    ui_img_59504384.c
    ui_img_icons_wifi24_png.c
    ui_img_icons_lock_png.c
    ui_img_icons_net0_png.c
    ui_img_icons_net2_png.c
    ui_img_icons_net3_png.c
    ui_img_icons_net1_png.c
    ui_img_icons_4g_png.c
    ui_img_icons_fail_png.c
    ui_img_icons_success_png.c
    ui_img_242677916.c
    ui_img_icons_ups_png.c
    ui_img_1786102466.c
    ui_img_222824350.c
    ui_img_icons_monitor_png.c
    ui_img_icons_net0_png.c
    ui_img_icons_net2_png.c
    ui_img_icons_net3_png.c
    ui_img_510141704.c
    ui_img_146667093.c
    ui_img_12471400_png.c
    ui_img_1355713233.c
    ui_img_bg_png.c
    ui_img_bottomtab_png.c
    ui_img_btn_1_act_png.c
    ui_img_btn_1_inact_png.c
    ui_img_menu_on_png.c
    ui_img_pin_on_png.c
    fonts/ui_font_Big.c
    fonts/ui_font_Bold.c
    fonts/ui_font_Medium.c
    fonts/ui_font_Number.c
    fonts/ui_font_Small.c)

add_library(ui ${SOURCES})
